# AEOSBench-Repro

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
aeosbench/: __init__.py  constants.py  paths.py
aeosbench/baselines/: __init__.py
aeosbench/cli/: __init__.py  _common.py  eval.py  generate_dataset.py  run_baseline.py  train_rl.py  train_sl.py
aeosbench/data/: __init__.py  constellations.py  geodetics.py  orbits.py  tasksets.py
aeosbench/evaluation/: __init__.py  basilisk_env.py  checkpoints.py  layout.py  metrics.py  model_config.py  reports.py  runner.py  statistics.py
aeosbench/generation/: __init__.py  config.py  expert.py  layout.py  pipeline.py  sampling.py
aeosbench/models/: __init__.py  aeosformer.py
docs/: bsk2513.md  eval-reproduction.md
scripts/: _bootstrap.py  aggregate_sidecar_metrics.py  eval.py  generate_dataset.py  run_baseline.py  train_rl.py  train_sl.py
tests/: test_aeosformer_supervised.py  test_eval_basilisk_env.py  test_eval_cli.py  test_eval_layout.py  test_eval_metrics.py  test_eval_model.py  test_eval_runner.py  test_eval_smoke.py  test_eval_statistics.py  test_generate_config.py  test_generate_dataset.py  test_generate_expert.py  test_imports.py  test_paths.py  test_rl_config.py  test_rl_env.py  test_rl_loop.py  test_rl_round_trip.py  test_scripts.py  test_sim_runtime.py  test_train_checkpoints.py  test_train_config.py  test_train_dataset.py  test_train_labels.py  test_train_losses.py  test_train_rl_cli.py  test_train_selection.py  test_train_smoke.py  test_train_statistics.py  test_train_trainer.py
(+22 files in other folders)
