[project]
name = "aeosbench-repro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bsk>=2.9.1",
    "gymnasium>=1.2.3",
    "huggingface-hub>=1.7.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "stable-baselines3>=2.7.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
]
