[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "aeosbench-repro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bsk>=2.9.1",
    "gymnasium>=1.2.3",
    "huggingface-hub>=1.7.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyyaml>=6.0.2",
    "pytest>=9.0.2",
    "stable-baselines3>=2.7.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
]

[tool.hatch.build.targets.wheel]
packages = ["aeosbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["vendor", ".venv", "data"]
markers = [
    "experimental: marks exploratory tests that are not part of the default fast suite",
    "slow: marks tests that use the real Basilisk evaluation stack",
]
